--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Edit meta tags for SEO -->
-    <title>Mohammad Raza | Mern Stack developer</title>
+    <title>Shaharyar Ud Din | MERN Stack developer</title>
     <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
     <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
 
